force-app/src/objects/c2g__AllocationSplitTemplate__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpallocationsplittemplate</customHelpPage>
    <description>Stores the split percentage information for the template.</description>
    <fields>
        <fullName>c2g__AllocationTemplate__c</fullName>
        <label>Allocation Template</label>
        <referenceTo>c2g__AllocationTemplate__c</referenceTo>
        <relationshipLabel>Allocation Split Templates</relationshipLabel>
        <relationshipName>AllocationSplitTemplates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Allocation Split Templates</relationshipLabel>
        <relationshipName>AllocationSplitTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Allocation Split Templates</relationshipLabel>
        <relationshipName>AllocationSplitTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Allocation Split Templates</relationshipLabel>
        <relationshipName>AllocationSplitTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Allocation Split Templates</relationshipLabel>
        <relationshipName>AllocationSplitTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccountAll__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The GLA on the distribution criteria for allocation. Corporate GLA must be selected in the case of non-local companies and local GLA must be selected in the case of local companies.</description>
        <label>General Ledger Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Allocation Split Templates All GLAs</relationshipLabel>
        <relationshipName>AllocationSplitTemplatesAllGlas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Allocation Split Templates</relationshipLabel>
        <relationshipName>AllocationSplitTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__LocalGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local GLA</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a local GLA and must be active.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Allocation Split Templates Local GLA</relationshipLabel>
        <relationshipName>AllocationSplitTemplatesLocalGla</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PercentageSplit__c</fullName>
        <label>Percentage Split (%)</label>
        <precision>7</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <label>Allocation Split Template</label>
    <nameField>
        <displayFormat>AST{000000}</displayFormat>
        <label>Allocation Split Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Split Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>